# fatiguecode

QuAlgorithms-master/: pyproject.toml
QuAlgorithms-master/qu_algorithms/: Untitled-1.ipynb  Untitled-2.ipynb  Untitled-q111.ipynb  anglesforfastpath.ipynb  catgptswmethod.ipynb  circuit.tex  codeiamcurrentlydoin - Copy.ipynb  examples_3_qubit_operations.ipynb  fatiguemonitor.py  freshcodeoutput.ipynb  freshcodeoutputoriginal.ipynb  helper_functions.py  inverse_circuit.tex  qft.py  qsiht_library.py  state_preparation.py  superfreshcode.ipynb  superfreshcode.py  theta_opt_quantum_spsa_10qubit.npy
